--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "cborg": "^1.9.6"
   }
 }
