Add eslint command.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --config=jest.config.cjs ./test/*",
-    "build": "mkdir -p dist && touch dist/cleanup && rm dist/* && tsc -b"
+    "build": "mkdir -p dist && touch dist/cleanup && rm dist/* && tsc -b",
+    "lint": "eslint ./src/* ./test/*"
   },
   "repository": {
     "type": "git",
