--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest --config=jest.config.cjs ./test/*",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.cjs ./test/*",
     "build": "mkdir -p dist && touch dist/cleanup && rm dist/* && tsc -b",
     "lint": "eslint ./src/* ./test/*"
   },
@@ -22,6 +22,8 @@
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "crdt-interfaces": "git+ssh://git@code.organicdesign.nz:222/organicdesign/crdt-interfaces.git",
+    "crdt-tests": "git+ssh://git@code.organicdesign.nz:222/organicdesign/crdt-tests.git",
+    "eslint": "^8.29.0",
     "eslint-plugin-jest": "^27.1.4",
     "jest": "^29.3.0",
     "ts-jest": "^29.0.3",
