--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "type": "module",
   "name": "crdts",
-  "version": "1.0.0",
-  "description": "A group of useful CRDTs and interfaces.",
+  "version": "0.1.0",
+  "description": "A group of useful CRDTs implementing interfaces from crdt-interfaces.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@code.organicdesign.nz:222/organicdesign/typescript-template.git"
+    "url": "ssh://git@code.organicdesign.nz:222/organicdesign/crdts.git"
   },
   "author": "Saul Boyd",
   "license": "GPL-3.0-or-later",
