--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "cborg": "^1.9.6"
+    "cborg": "^1.9.6",
+    "uint8arrays": "^4.0.2"
   }
 }
