Use protocols repo for GCounter sync protocol.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "cborg": "^1.9.6",
+    "crdt-protocols": "git+ssh://git@code.organicdesign.nz:222/organicdesign/crdt-protocols.git",
     "uint8arrays": "^4.0.2"
   }
 }
