--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Saul Boyd",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@organicdesign/crdt-interfaces": "^1.0.0",
     "@swc/core": "^1.3.14",
     "@types/jest": "^29.2.2",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
@@ -31,8 +32,6 @@
   },
   "dependencies": {
     "@organicdesign/buffer-collections": "^0.1.1",
-    "cborg": "^1.9.6",
-    "crdt-interfaces": "git+ssh://git@code.organicdesign.nz:222/organicdesign/crdt-interfaces.git",
-    "uint8arrays": "^4.0.2"
+    "cborg": "^1.9.6"
   }
 }
