--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@organicdesign/crdt-interfaces": "^1.0.0",
+    "@organicdesign/crdt-tests": "^0.1.1",
     "@swc/core": "^1.3.14",
     "@types/jest": "^29.2.2",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
-    "crdt-tests": "git+ssh://git@code.organicdesign.nz:222/organicdesign/crdt-tests.git",
     "eslint": "^8.29.0",
     "eslint-plugin-jest": "^27.1.4",
     "jest": "^29.3.0",
