--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "@organicdesign/crdts",
   "version": "0.1.3",
   "description": "A group of useful CRDTs implementing interfaces from @organicdesign/crdt-interfaces.",
+  "keywords": ["crdt", "crdts", "g-counter", "pn-counter", "g-set", "mv-register", "lww-register", "lww-map", "crdt-map"],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
