--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.cjs ./test/*",
     "build": "mkdir -p dist && touch dist/cleanup && rm dist/* && tsc -b",
-    "lint": "eslint ./src/* ./test/*"
+    "lint": "eslint './src/**/*.ts?(x)' ./test/*"
   },
   "homepage": "https://code.organicdesign.nz/organicdesign/crdts",
   "repository": {
@@ -19,7 +19,6 @@
   "author": "Saul Boyd",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@organicdesign/crdt-interfaces": "^2.0.0",
     "@organicdesign/crdt-tests": "^0.2.0",
     "@swc/core": "^1.3.14",
     "@types/jest": "^29.2.2",
@@ -33,6 +32,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@organicdesign/crdt-interfaces": "^2.0.0",
     "@organicdesign/buffer-collections": "^0.1.1",
     "cborg": "^1.9.6",
     "uint8arrays": "^4.0.3"
