--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
 		"declaration": true,
 		"module": "ES2022",
 		"outDir": "./dist",
-		"target": "ES6"
+		"target": "ES6",
+		"rootDir": "src"
 	},
 
 	"ts-node": {
