Change back to the package.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "name": "@organicdesign/crdts",
   "version": "0.2.0",
   "description": "A group of useful CRDTs implementing interfaces from @organicdesign/crdt-interfaces.",
-  "keywords": ["crdt", "crdts", "g-counter", "pn-counter", "g-set", "mv-register", "lww-register", "lww-map", "crdt-map"],
+  "keywords": [
+    "crdt",
+    "crdts",
+    "g-counter",
+    "pn-counter",
+    "g-set",
+    "mv-register",
+    "lww-register",
+    "lww-map",
+    "crdt-map"
+  ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.cjs ./test/*",
-    "build": "mkdir -p dist && touch dist/cleanup && rm dist/* && tsc -b",
+    "build": "mkdir -p dist && touch dist/cleanup && rm -R dist/* && tsc -b",
     "lint": "eslint './src/**/*.ts?(x)' ./test/*"
   },
   "homepage": "https://code.organicdesign.nz/organicdesign/crdts",
@@ -19,7 +29,7 @@
   "author": "Saul Boyd",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@organicdesign/crdt-tests": "^0.2.0",
+    "@organicdesign/crdt-tests": "^0.3.0",
     "@swc/core": "^1.3.14",
     "@types/jest": "^29.2.2",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
@@ -32,8 +42,9 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@organicdesign/crdt-interfaces": "^2.0.0",
     "@organicdesign/buffer-collections": "^0.1.1",
+    "@organicdesign/crdt-interfaces": "^4.0.0",
+    "@organicdesign/crdt-map-synchronizer": "^0.1.0",
     "cborg": "^1.9.6",
     "uint8arrays": "^4.0.3"
   }
