--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
 		"declaration": true,
 		"module": "ES2022",
 		"outDir": "./dist",
-		"target": "ES6",
-		"rootDir": "src"
+		"target": "ES6"
 	},
 
 	"ts-node": {
